--- a/src/app/addressbook/addressbook.jade
+++ b/src/app/addressbook/addressbook.jade
@@ -2,10 +2,10 @@ div.segment
   main.ui.three.column.grid
     aside.column
       .ui.icon.input()
-        input(type='text' placeholder='Search')
+        input(type='text' placeholder='Search' ng-model='queryString' autofocus)
         i.search.icon
     section.column
       h2.ui.dividing.header
         | 查詢結果
       .ui.message
-        | fake data
+        | {{queryResult}}
