--- a/src/app/addressbook/addressbook.jade
+++ b/src/app/addressbook/addressbook.jade
@@ -7,5 +7,6 @@ div.segment
     section.column
       h2.ui.dividing.header
         | 查詢結果
-      .ui.message
-        | {{queryResult}}
+        .ui.message
+          .li(ng-repeat='item in queryResult')
+            {{item.name}}
