add landing page

--- a/src/app/nav/nav.jade
+++ b/src/app/nav/nav.jade
@@ -1,9 +1,9 @@
-.fixed.ui.top.collapsible.inverted.menu
+.fixed.ui.top.inverted.menu
     .container
-        .header
-          a.left.floated.item.header.red.brand(href='/') addressbook
-        .content
-          a.item(href='#/addressbook' ui-route='/addressbook', ng-class='{active:$uiRoute}')
-            | 通訊錄
-          a.item(href='#/home' ui-route='/home', ng-class='{active:$uiRoute}')
-            | page2
+        .item.menu
+          a.header.brand(href='/#/addressbook/') 政府公開通訊錄
+        .content.right.menu
+          a.item
+            | 關於我們
+          a.item
+            | G0V 零時政府
