--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,8 +1,238 @@
-body {
-    height: 100%;
-    font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif/*rtl:prepend:"Droid Arabic Kufi","Droid Sans", */;
+@charset "UTF-8";
+/* CSS Document */
+
+@import 'reset.css';
+
+body{
+    width:100%;
+    height:100%;
+    font:"蘋果中黑體","微軟正黑體",Verdana, Geneva, sans-serif;
+    background:#F7F2F2;
+    margin: 0 auto;
 }
 
-.segment {
-    padding-top: 70px;
+#wrapper{
+    min-width:1000px;
+    min-height:700px;
+    margin:0 auto;
+}
+
+/* 首頁內容 */
+
+a.brand{
+    display:block;
+    width:215px;
+    height:19px;
+    background:url('/assets/images/logo.png') no-repeat;
+    background-size: 80%;
+    text-indent:-9999px;
+}
+
+.intro_section {
+    padding: 5% 0;
+}
+
+.result_section {
+    padding: 50px 0;
+}
+
+h2.logo{
+    width:482px;
+    height:92px;
+    background:url('/assets/images/pattern.png') no-repeat center center;
+    padding:50px;
+    margin:0 auto;
+}
+
+.searchbox{
+    width:480px;
+    height:38px;
+    padding:2px;
+    margin:0 auto;
+}
+
+.searchbox input{
+    float:left;
+    width:400px;
+    height:35px;
+    font-size:14.5px;
+    border-radius:5px 0px 0px 5px;
+    border:1px solid #898989;
+    color:#898989;
+    text-align:center;
+    letter-spacing:0.15em;
+}
+
+.searchbox a{
+    float:left;
+    font-size:14.5px;
+    width:75px;
+    line-height:0.7em;
+    background:#898989;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    color:#fff;
+    border-radius:0px 5px 5px 0px;
+}
+
+.searchbox a:hover{
+    background:#787878;
+}
+
+.main_btn{
+    width:420px;
+    height:200px;
+    margin:0 auto;
+    padding:30px;
+}
+
+.main_btn ul{
+    width:420px;
+    height:200px;
+    padding: 0px;
+    list-style-type: none;
+}
+
+.main_btn ul li{
+    float:left;
+}
+
+.main_btn ul li a{
+    display:block;
+    width:200px;
+    height:200px;
+    margin-right:10px;
+    background:url('/assets/images/image.png');
+}
+
+.main_btn ul li.gov a{
+    background-position:0px -210px;
+}
+
+.main_btn ul li.gov a:hover{
+    background-position:-200px -210px;
+}
+
+.main_btn ul li.men a{
+    background-position:0px 0px;
+}
+
+.main_btn ul li.men a:hover{
+    background-position:-200px 0px;
+}
+
+
+/* 頁尾 */
+
+.footer{
+    width:100%;
+    height:20px;
+    background:#D1CCCB;
+    position:fixed;
+    bottom:0;
+    left:0;
+}
+
+
+/*列表頁*/
+
+h3{
+    width:210px;
+    height:50px;
+    background:url('/assets/images/image.png') no-repeat -200px -515px;
+    margin:20px auto;
+}
+
+.list{
+    width:700px;
+    height:auto;
+    padding:0px 0px 20px 0px;
+    margin:0 auto;
+}
+
+.list ul{
+    width:630px;
+    height:255px;
+    margin:0 auto;
+    border-bottom:1px #454545 solid;
+}
+
+.list ul li{
+}
+
+.list ul li .list_table{
+    width:600px;
+    height:235px;
+    background:#fff;
+    border-radius:5px;
+    float:left;
+}
+
+.list ul li .list_table .photoBox{
+    width:175px;
+    height:200px;
+    float:left;
+}
+
+.list ul li .list_table .photoBox .photo{
+    width:90px;
+    height:90px;
+    border-radius:30px;
+    background:url('/assets/images/image.png') no-repeat -310px -420px;
+    margin:15px auto;
+}
+
+.list ul li .list_table .photoBox .name{
+    width:90px;
+    line-height:2em;
+    font-size:23px;
+    display:inline;
+    text-align:center;
+    color:#666;
+}
+
+.list ul li .list_table .photoBox .sect{
+    width:23px;
+    height:17px;
+    background:url('/assets/images/image.png') no-repeat 0px -542px;
+    margin:0 auto;
+}
+
+.list ul li .list_table .infoBox{
+    width:425px;
+    height:200px;
+    padding-left:175px;
+}
+
+.list ul li .list_table .btn{
+    width:600px;
+    height:35px;
+    border-radius:0px 0px 5px 5px;
+    background:#FF8B7B;
+}
+
+.list ul li .tag{
+    width:30px;
+    height:215px;
+    padding-top:20px;
+    float:left;
+}
+
+.list ul li .tag .li_tag{
+    width:26px;
+    height:26px;
+    background:#0573C4;
+    padding:2px;
+    margin-bottom:10px;
+}
+
+.list ul li .tag .li_tag p{
+    width:20px;
+    line-height:1.27em;
+    font-size:15px;
+    color:#fff;
+    border-radius:20px;
+    border:3px #fff solid;
+    text-align:center;
 }
