--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
 
-@import 'reset.css';
-
 body{
     width:100%;
     height:100%;
@@ -122,7 +120,6 @@ h2.logo{
     background-position:-200px 0px;
 }
 
-
 /* 頁尾 */
 
 .footer{
@@ -134,10 +131,9 @@ h2.logo{
     left:0;
 }
 
-
 /*列表頁*/
 
-h3{
+h3.result_list {
     width:210px;
     height:50px;
     background:url('/assets/images/image.png') no-repeat -200px -515px;
@@ -146,33 +142,46 @@ h3{
 
 .list{
     width:700px;
-    height:auto;
-    padding:0px 0px 20px 0px;
+    height:100%;
     margin:0 auto;
 }
 
-.list ul{
+.hr{
+    height:1px;
     width:630px;
-    height:255px;
+    border-top:#999 1px solid;
     margin:0 auto;
-    border-bottom:1px #454545 solid;
+    padding:5px 0px;
 }
 
-.list ul li{
+.list ul.cotainBox{
+    width:630px;
+    min-height:250px;
+    height:100%;
+    margin:0 auto;
+    display:block;
+    clear:both;
 }
 
-.list ul li .list_table{
+.list ul.cotainBox li{
+    display:block;
+    float:left;
+}
+
+.list ul.cotainBox li .list_table{
     width:600px;
-    height:235px;
+    height:100%;
     background:#fff;
     border-radius:5px;
     float:left;
+    margin-bottom:10px;
 }
 
+/*列表照片欄*/
 .list ul li .list_table .photoBox{
     width:175px;
-    height:200px;
     float:left;
+    min-height: 200px;
 }
 
 .list ul li .list_table .photoBox .photo{
@@ -182,7 +191,6 @@ h3{
     background:url('/assets/images/image.png') no-repeat -310px -420px;
     margin:15px auto;
 }
-
 .list ul li .list_table .photoBox .name{
     width:90px;
     line-height:2em;
@@ -191,7 +199,6 @@ h3{
     text-align:center;
     color:#666;
 }
-
 .list ul li .list_table .photoBox .sect{
     width:23px;
     height:17px;
@@ -199,22 +206,37 @@ h3{
     margin:0 auto;
 }
 
+/*列表資訊欄*/
+
 .list ul li .list_table .infoBox{
     width:425px;
-    height:200px;
-    padding-left:175px;
+    height:100%;
 }
 
 .list ul li .list_table .btn{
     width:600px;
     height:35px;
+}
+.list ul li .list_table .btn a{
+    font-size:15px;
+    line-height:2.5em;
+    color:#fff;
+    text-decoration:none;
+    text-align:center;
     border-radius:0px 0px 5px 5px;
+    display:block;
     background:#FF8B7B;
 }
 
+.list ul li .list_table .btn a:hover{
+    background:#FF7061;
+
+}
+
+/*右側tag*/
+
 .list ul li .tag{
     width:30px;
-    height:215px;
     padding-top:20px;
     float:left;
 }
@@ -235,4 +257,92 @@ h3{
     border-radius:20px;
     border:3px #fff solid;
     text-align:center;
+}
+
+/*列表資訊欄  */
+
+i{
+    color:#D3665E;
+    text-align:center;
+}
+
+.infoBox{
+    width:425px;
+    height:100%;
+    min-height:200px;
+    color:#D3665E;
+    overflow:hidden;
+}
+
+.info_title{
+    float:left;
+    padding-right:5px;
+    padding:bottom:5px;
+}
+
+.info_content{
+    color:#333;
+    padding-top:5px;
+    padding-bottom:2px;
+    float:left;
+}
+.info_content p.lab{
+    border-radius:10px;
+    background:#707070;
+    text-align:center;
+    font-size:12px;
+    color:#fff;
+    float:left;
+    padding:0px 5px;
+    margin-bottom:2px;
+    line-height:1.5em;
+}
+.info_content p.num{
+    float:left;
+    padding:0px 5px;
+    margin-bottom:2px;
+    line-height:1.5em;
+}
+
+.infoBox ul.basicBox{
+    width:100%;
+    height:100%;
+    color:#D3665E;
+    float:left;
+    display:block;
+}
+
+.infoBox ul.basicBox li{
+    float:left;
+    width:100%;
+    margin:2px 0px;
+}
+
+.infoBox ul.basicBox li div{
+    text-align: center;
+}
+
+.infoBox ul.basicBox li div p{
+    line-height: 0.1em;
+}
+
+/**/
+
+.infoBox ul.detailBox{
+    width:100%;
+    height:100%;
+    color:#D3665E;
+    float:left;
+    display:block;
+    padding-bottom:10px;
+}
+
+.infoBox ul.detailBox li{
+    float:left;
+    width:100%;
+}
+
+.infoBox ul.detailBox li.flag{
+    height:50%;
+    min-height:30px;
 }
