--- a/src/app/addressbook/addressbook.jade
+++ b/src/app/addressbook/addressbook.jade
@@ -4,7 +4,7 @@
     .searchbox
       input(type='text' id='text1' placeholder='請直接輸入想搜尋的關鍵字' ng-model='queryString' autofocus)
       a(href='#/addressBookResultBox')
-        p 送  出
+        div(type='button') 送  出
 
     .ui.content
       h3.ui.result_list
