--- a/src/app/addressbook/addressbook.less
+++ b/src/app/addressbook/addressbook.less
@@ -15,8 +15,9 @@ h3.result_list {
 
 h2.logo{
     width:482px;
-    height:92px;
+    min-height:82px;
     background:url('/assets/images/pattern.png') no-repeat center center;
+    //background-size:contain;
     padding:50px;
     margin:0 auto;
 }
@@ -29,7 +30,7 @@ h2.logo{
 }
 
 .searchbox input{
-    float:left;
+    display:inline-block;
     width:400px;
     height:35px;
     font-size:14.5px;
@@ -41,13 +42,12 @@ h2.logo{
 }
 
 .searchbox a{
-    float:left;
+    display:inline-block;
     font-size:14.5px;
     width:75px;
-    line-height:0.7em;
+    line-height:2.7em;
     background:#898989;
     text-decoration:none;
-    display:block;
     text-align:center;
     color:#fff;
     border-radius:0px 5px 5px 0px;
@@ -55,6 +55,40 @@ h2.logo{
 
 .searchbox a:hover{
     background:#787878;
+}
+
+@media screen and (max-width: 652px) {
+  div.column{
+    padding-top:2.5%;
+  }
+  h2.logo{
+    width:80%;
+    min-height:42px;
+    background:url('/assets/images/pattern.png') no-repeat center center;
+    background-size:contain;
+    padding:13% 0 5%;
+  }
+  .searchbox{
+    width:80%;
+  }
+  .searchbox input{
+    width:80%;
+  }
+  .searchbox a{
+    width:17%;
+  }
+}
+
+@media screen and (max-width: 467px) {
+  div.column{
+    padding:22% 0 0;
+  }
+  h2.logo{
+    width:95%;
+  }
+  .searchbox{
+    width:95%;
+  }
 }
 
 .containbox {
